# goschool

./: .dockerignore  .env  .gitignore  1  2  Cargo.toml  README.md  ]  cookies.txt  create_database.py  database.sql  init.sql  private_key.pem  public_key.pem
email_templates/: assistance_upload.html  disciplinary_sanction_upload.html  message_sent.html  subject_message_sent.html
src/: creation.rs  email.rs  filters.rs  functions.rs  jwt.rs  main.rs  routes.rs  sqlx_fn.rs  structs.rs  traits.rs  user.rs
src/email_templates/: assessment_created.html  grade_submitted.html  message_sent.html  no_valid_subject.html  subject_message_sent.html
src/impls/: chat_authorization.rs  mod.rs  user_delete.rs  user_get.rs  user_new.rs  user_post.rs  user_update.rs
src/views/: assessmets.rs  assign_grade.rs  assistance.rs  chat.rs  chat_api.rs  chat_message.rs  courses.rs  create_assesment.rs  create_assessment.rs  create_homework.rs  create_homework_submission.rs  create_submission.rs  create_submission_selfassable.rs  create_task.rs  disciplinary_sanctions.rs  get_assessmets.rs  get_courses.rs  get_grade_selfassessable.rs  get_grades.rs  get_if_answered.rs  get_messages.rs  get_personal_data.rs  get_profile_picture.rs  get_role.rs  get_roles.rs  get_students.rs  get_subjects.rs  grades.rs  login.rs  messages.rs  mod.rs  personal_data.rs  post_families.rs  post_message.rs  profile_pictures.rs  register.rs  register_testing_users.rs  roles.rs  selfassessables.rs  selfassessables_pending_grades.rs  (+9 more)
src/websocket/: handler.rs  manager.rs  mod.rs  protocol.rs
