[package]
name = "goschool"
version = "2.0.0"
edition = "2024"

[dependencies]

actix-web = "4"
actix-files = "0.6"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15"
actix-cors = "0.7"
bcrypt = "0.17"
jsonwebtoken="9.3"
log = "0.4"
env_logger = "0.11"
actix-multipart = "0.7"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
mime = "0.3"
sanitize-filename = "0.6"
tempfile = "3.19"
